Switched URL to URI. Updated pom.xml to maven 3.