@@ -21,6 +21,8 @@
 package it.bancaditalia.oss.sdmx.client.custom;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -32,6 +34,7 @@ import it.bancaditalia.oss.sdmx.api.DSDIdentifier;
 import it.bancaditalia.oss.sdmx.api.DataFlowStructure;
 import it.bancaditalia.oss.sdmx.api.Dataflow;
 import it.bancaditalia.oss.sdmx.exceptions.SdmxException;
+import it.bancaditalia.oss.sdmx.exceptions.SdmxExceptionFactory;
 import it.bancaditalia.oss.sdmx.exceptions.SdmxXmlContentException;
 import it.bancaditalia.oss.sdmx.parser.v20.DataStructureParser;
 import it.bancaditalia.oss.sdmx.parser.v21.Sdmx21Queries;
@@ -46,9 +49,9 @@ public class ILO extends RestSdmx20Client {
 		
 	protected static Logger logger = Configuration.getSdmxLogger();
 	
-	public ILO() throws MalformedURLException{
+	public ILO() throws URISyntaxException {
 		//the ILO providers supports https but it gets errors with java 1.6
-		super("ILO", new URL("http://www.ilo.org/ilostat/sdmx/ws/rest"), false, "application/vnd.sdmx.structurespecificdata+xml;version=2.1", "");
+		super("ILO", new URI("http://www.ilo.org/ilostat/sdmx/ws/rest"), false, "application/vnd.sdmx.structurespecificdata+xml;version=2.1", "");
 	}
 
 	@Override
@@ -60,7 +63,12 @@ public class ILO extends RestSdmx20Client {
 		for (Iterator<String> iterator = collections.keySet().iterator(); iterator.hasNext();) 
 		{
 			String coll = (String) iterator.next();
-			URL query = RestQueryBuilder.of(endpoint).path("datastructure").path("ILO").path(coll + "_ALL_MULTI").build(needsURLEncoding);
+			URL query;
+			try {
+				query = new RestQueryBuilder(endpoint).addPath("datastructure").addPath("ILO").addPath(coll + "_ALL_MULTI").build();
+			} catch (MalformedURLException e) {
+				throw SdmxExceptionFactory.wrap(e);
+			}
 			List<DataFlowStructure> dfs = runQuery(new DataStructureParser(), query, null);
 			if(dfs.size() > 0){
 				for (Iterator<DataFlowStructure> iterator1 = dfs.iterator(); iterator1.hasNext();) 
@@ -88,6 +96,6 @@ public class ILO extends RestSdmx20Client {
 	
 	@Override
 	protected URL buildFlowQuery(String dataflow, String agency, String version) throws SdmxException{
-		return Sdmx21Queries.getDataflowQuery(endpoint,dataflow, "ILO", version).build(needsURLEncoding);
+		return Sdmx21Queries.createDataflowQuery(endpoint,dataflow, "ILO", version).buildSdmx21Query();
 	}
 }
