@@ -20,13 +20,17 @@
 */
 package it.bancaditalia.oss.sdmx.client.custom;
 
-import it.bancaditalia.oss.sdmx.api.Dataflow;
-import it.bancaditalia.oss.sdmx.util.Configuration;
-import it.bancaditalia.oss.sdmx.util.RestQueryBuilder;
-
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.logging.Logger;
+
+import it.bancaditalia.oss.sdmx.api.Dataflow;
+import it.bancaditalia.oss.sdmx.exceptions.SdmxException;
+import it.bancaditalia.oss.sdmx.exceptions.SdmxExceptionFactory;
+import it.bancaditalia.oss.sdmx.util.Configuration;
+import it.bancaditalia.oss.sdmx.util.RestQueryBuilder;
 
 /**
  * @author Attilio Mattiocco
@@ -38,23 +42,26 @@ public class IMF extends DotStat{
 		
 	protected static Logger logger = Configuration.getSdmxLogger();
 	
-	public IMF() throws MalformedURLException{
-		super("IMF", new URL(baseEndpoint + "/sdmx.ashx"), false);
+	public IMF() throws URISyntaxException {
+		super("IMF", new URI(baseEndpoint + "/sdmx.ashx"), false);
 	}
 
 	@Override
-	protected URL buildDSDQuery(String dsd, String agency, String version, boolean full){
-		if( endpoint!=null  &&
-				dsd!=null && !dsd.isEmpty()){
+	protected URL buildDSDQuery(String dsd, String agency, String version, boolean full) throws SdmxException{
+		if( endpoint!=null  && dsd!=null && !dsd.isEmpty()){
 			RestQueryBuilder query;
 			try {
 				query = !dsd.contentEquals("ALL")
-					? RestQueryBuilder.of(endpoint)
-					: RestQueryBuilder.of(new URL(baseEndpoint));
-			} catch (MalformedURLException ex) {
+					? new RestQueryBuilder(endpoint)
+					: new RestQueryBuilder(new URI(baseEndpoint));
+			} catch (URISyntaxException ex) {
 				throw new RuntimeException(ex);
 			}
-			return query.path("GetKeyFamily").path(dsd).build(needsURLEncoding);
+			try {
+				return query.addPath("GetKeyFamily").addPath(dsd).build();
+			} catch (MalformedURLException e) {
+				throw SdmxExceptionFactory.wrap(e);
+			}
 		}
 		else{
 			throw new RuntimeException("Invalid query parameters: dsd=" + dsd + " endpoint=" + endpoint);
@@ -64,26 +71,30 @@ public class IMF extends DotStat{
 	@Override
 	protected URL buildDataQuery(Dataflow dataflow, String resource, 
 			String startTime, String endTime, 
-			boolean serieskeysonly, String updatedAfter, boolean includeHistory){
+			boolean serieskeysonly, String updatedAfter, boolean includeHistory) throws SdmxException{
 		if( endpoint!=null && 
 				dataflow!=null &&
 				resource!=null && !resource.isEmpty()){
 
 			// for IMF use the simple DF id
-			RestQueryBuilder query = RestQueryBuilder.of(endpoint).path("GetData")
-				.param("dataflow", dataflow.getId())
-				.param("key", resource)
-				.param("format", format);
+			RestQueryBuilder query = new RestQueryBuilder(endpoint).addPath("GetData")
+				.addParam("dataflow", dataflow.getId())
+				.addParam("key", resource)
+				.addParam("format", format);
 			
 			if((startTime != null && !startTime.isEmpty()) || (endTime != null && !endTime.isEmpty())){
 				if(startTime != null){
-					query.param("startTime", startTime);
+					query.addParam("startTime", startTime);
 				}
 				if(endTime != null){
-					query.param("endTime", endTime);
+					query.addParam("endTime", endTime);
 				}
 			}
-			return query.build(needsURLEncoding);
+			try {
+				return query.build();
+			} catch (MalformedURLException e) {
+				throw SdmxExceptionFactory.wrap(e);
+			}
 		}
 		else{
 			throw new RuntimeException("Invalid query parameters: dataflow=" + dataflow + " resource=" + resource + " endpoint=" + endpoint);
