@@ -20,11 +20,12 @@
 */
 package it.bancaditalia.oss.sdmx.client.custom;
 
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+
 import it.bancaditalia.oss.sdmx.api.Dataflow;
 import it.bancaditalia.oss.sdmx.exceptions.SdmxException;
-
-import java.net.MalformedURLException;
-import java.net.URL;
 
 /**
  * @author Attilio Mattiocco
@@ -32,8 +33,8 @@ import java.net.URL;
  */
 public class NBB extends DotStat{
 		
-	public NBB() throws MalformedURLException{
-		super("NBB", new URL("https://stat.nbb.be/RestSDMX/sdmx.ashx"), false);
+	public NBB() throws URISyntaxException {
+		super("NBB", new URI("https://stat.nbb.be/RestSDMX/sdmx.ashx"), false);
 	}
 	
 	@Override
