@@ -20,15 +20,15 @@
 */
 package it.bancaditalia.oss.sdmx.client.custom;
 
+import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
+
+import javax.swing.JFrame;
+
 import it.bancaditalia.oss.sdmx.client.RestSdmxClient;
 import it.bancaditalia.oss.sdmx.util.Configuration;
 import it.bancaditalia.oss.sdmx.util.LoginDialog;
-
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
-
-import javax.swing.JFrame;
 
 /**
  * @author Attilio Mattiocco
@@ -38,8 +38,8 @@ public class UIS extends RestSdmxClient{
 	
 	private String apiKey = null;
 	
-	public UIS() throws MalformedURLException{
-		super("UIS", new URL("https://api.uis.unesco.org/sdmx"), false, false, true);
+	public UIS() throws URISyntaxException {
+		super("UIS", new URI("https://api.uis.unesco.org/sdmx"), false, false, true);
 		apiKey = Configuration.getUISApiKey();
 		if(apiKey == null || apiKey.isEmpty()){
 			final JFrame frame = new JFrame("Authentication");
