@@ -20,14 +20,18 @@
 */
 package it.bancaditalia.oss.sdmx.client.custom;
 
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.util.logging.Logger;
+
 import it.bancaditalia.oss.sdmx.api.Dataflow;
+import it.bancaditalia.oss.sdmx.exceptions.SdmxException;
+import it.bancaditalia.oss.sdmx.exceptions.SdmxExceptionFactory;
 import it.bancaditalia.oss.sdmx.parser.v21.Sdmx21Queries;
 import it.bancaditalia.oss.sdmx.util.Configuration;
 import it.bancaditalia.oss.sdmx.util.RestQueryBuilder;
-
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.logging.Logger;
 
 /**
  * @author Attilio Mattiocco
@@ -37,15 +41,18 @@ public class WB extends DotStat{
 		
 	protected static Logger logger = Configuration.getSdmxLogger();
 	
-	public WB() throws MalformedURLException{
-		super("WorldBank", new URL("http://api.worldbank.org"), false, null);
+	public WB() throws URISyntaxException {
+		super("WorldBank", new URI("http://api.worldbank.org"), false, null);
 	}
 	
 	@Override
-	protected URL buildDSDQuery(String dsd, String agency, String version, boolean full){
-		if( endpoint!=null  &&
-				dsd!=null && !dsd.isEmpty()){
-			return RestQueryBuilder.of(endpoint).path("KeyFamily").param("id", dsd).build(needsURLEncoding);
+	protected URL buildDSDQuery(String dsd, String agency, String version, boolean full) throws SdmxException{
+		if( endpoint!=null  && dsd!=null && !dsd.isEmpty()){
+			try {
+				return new RestQueryBuilder(endpoint).addPath("KeyFamily").addParam("id", dsd).build();
+			} catch (MalformedURLException e) {
+				throw SdmxExceptionFactory.wrap(e);
+			}
 		}
 		else{
 			throw new RuntimeException("Invalid query parameters: dsd=" + dsd + " endpoint=" + endpoint);
@@ -55,9 +62,9 @@ public class WB extends DotStat{
 	@Override
 	protected URL buildDataQuery(Dataflow dataflow, String resource, 
 			String startTime, String endTime, 
-			boolean serieskeysonly, String updatedAfter, boolean includeHistory){
-		RestQueryBuilder query = RestQueryBuilder.of(endpoint).path("v2").path("data").path(dataflow.getId()).path(fixKey(resource));
-		return Sdmx21Queries.addParams(query, startTime, endTime, serieskeysonly, null, false, format).build(needsURLEncoding);
+			boolean serieskeysonly, String updatedAfter, boolean includeHistory) throws SdmxException{
+		
+		return ((Sdmx21Queries) new Sdmx21Queries(endpoint).addPath("v2").addPath("data").addPath(dataflow.getId()).addPath(fixKey(resource))).addParams(startTime, endTime, serieskeysonly, null, false, format).buildSdmx21Query();
 	}
 	
 	// https://github.com/amattioc/SDMX/issues/19
